Updated swagger file
